# dumses-hybrid

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.nvhpc  Makefile.nvidiampi  README  README.md  configure  configure.ac  make.py
m4/: ax_lib_nccl.m4  ax_lib_pnetcdf.m4  lx_find_mpi.m4
makefiles/: Makefile.gcc  Makefile.intel  Makefile.nvhpc
src/: Makefile.am  Makefile.in  dumses.f90
src/modules/: commons.f90  file.f90  read_h5.f90  write_h5.f90
src/modules/solvers/: solver.f90  solver_magnetic.f90
src/modules/tools/: debug.f90
src/problem/fargo/: condinit.f90
src/problem/incomp_shearwave/: condinit.f90  history.f90
src/problem/inertial_wave/: condinit.f90  history.f90
src/problem/magnetic_loop/: condinit.f90
src/problem/mri/: condinit.f90  history.f90
src/problem/orszag_tang/: condinit.f90
src/problem/shearwave/: condinit.f90  history.f90
src/problem/shock_tube/: condinit.f90
src/problem/stratified/: boundana.f90  boundary.f90  condinit.f90  dumses.f90  history.f90  source_term.f90  user_init.f90
src/problem/stratified/modules/: stratified.f90
src/problem/wind_tunnel/: condinit.f90
src/subroutines/: boundary.f90  fargo.f90  finalize.f90  get_shear.f90  history.f90  init.f90  output.f90  parallel.f90  physics.f90  restart.f90  scheme.f90  shearingbox.f90
src/userfiles/: boundana.f90  condinit.f90  source_term.f90  special.f90  user_init.f90  user_restart.f90
utils/dumpy/: setup.py
utils/dumpy/analysis/: mri.py
utils/dumpy/data/: formatChecker.py  rd_debug.py  rd_dumses.py  rd_history.py
utils/dumpy/plots/: snapshots.py
utils/dumpy/utils/: debug.py
utils/merco/: README  configure
utils/merco/src/: merco.f90
utils/merco/src/modules/: commons.f90  file.f90  parallel.f90  read_h5.f90  write_h5.f90
utils/merco/src/subroutines/: data.f90  input.f90  metadata.f90
utils/pyutils/gpuconfig/: gpuconfig.py
utils/pyutils/preproc/: preprocess.py
utils/submission/bgq/: submit.py
utils/test/: test.py
