if ENABLE_OPENMP
AM_FCFLAGS += $(OPENMP_FCFLAGS)
AM_LDFLAGS += $(OPENMP_FCFLAGS)
endif

if ENABLE_NCCL
AM_FCFLAGS += $(NCCL_FFLAGS)
AM_LDFLAGS += $(NCCL_LDFLAGS)
endif

if ENABLE_OPENACC
if NVIDIA
AM_FCFLAGS += -acc=gpu,host -cuda -Minfo=accel -Minline
endif
if GCC
AM_FCFLAGS += -fopenacc
endif
endif

if ENABLE_HDF5
AM_FCFLAGS += $(HDF5_FFLAGS)
AM_LDFLAGS += $(HDF5_LDFLAGS)
endif

if ENABLE_PNETCDF
AM_FCFLAGS += $(PNETCDF_FFLAGS)
AM_LDFLAGS += $(PNETCDF_LDFLAGS)
endif

FCCOMPILE = $(FC) $(AM_FCFLAGS) $(FCFLAGS) $(FPPFLAGS) -DMPI=$(MPI) -DOACC=$(OACC) -DCUDA_AWARE_MPI=$(CUDA_AWARE_MPI) -DNCCL=$(NCCL) -DHDF5=$(HDF5) -DPHDF5=$(PHDF5) -DPNCDF=$(PNCDF) -DNDIM=$(NDIM) -DISO=$(ISO) -DGEOM=$(GEOM) -DCARTESIAN=1 -DCYLINDRICAL=2 -DSPHERICAL=3

MODOBJ = $(MODFILES:.f90=.o)
MODSUBOBJ = $(MODSUBFILES:.f90=.o)
PRBSUBOBJ = $(PRBSUBFILES:.f90=.o)
PRBOBJ = $(PRBFILES:.f90=.o)
SUBOBJ = $(SUBFILES:.f90=.o)
USROBJ = $(USRFILES:.f90=.o)
SRCOBJ = $(SRCFILES:.f90=.o)

EXTRA_dumses_DEPENDENCIES =${MODFILES} ${MODSUBFILES} ${PRBSUBFILES} ${PRBFILES} ${SUBFILES} ${USRFILES} 
ALLOBJ = $(MODOBJ) $(MODSUBOBJ) $(PRBSUBOBJ) $(PRBOBJ) $(SUBOBJ) $(USROBJ) $(SRCOBJ)

VPATH = modules $(MODSUBDIRS) $(PRBSUBDIRS) $(PRBDIR) subroutines userfiles src

dumses_SOURCES = dumses.f90
bin_PROGRAMS = dumses
CLEANFILES = *.mod $(ALLOBJ)

dumses: $(ALLOBJ)
	$(FC) $(AM_FCFLAGS) $(FCFLAGS) $^ -o dumses
